banner section finished

--- a/index.html
+++ b/index.html
@@ -7,5 +7,42 @@
     <title>G3-Architect</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <nav class="container nav-section">
+        <h1>G3 Architects</h1>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact us</li>
+          <li>Login</li>
+        </ul>
+      </nav>
+
+      <section class="container">
+        <div class="card">
+          <!-- <div class="a"></div>
+          <div class="b"></div> -->
+          <div class="card__text">
+            <h1 class="card-title">
+              Brand New <br />
+              Group of Architects
+            </h1>
+            <p class="card-desc">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+            <button class="primary-btn">Explore More</button>
+          </div>
+          <div class="card__image">
+            <img src="./images/banner.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </div>
+    <section class="container">
+      <h2>HIIIIIIIIIIIIIIIIIIIIII</h2>
+    </section>
+  </body>
 </html>
