--- a/index.html
+++ b/index.html
@@ -42,7 +42,25 @@
       </section>
     </div>
     <section class="container">
-      <h2>HIIIIIIIIIIIIIIIIIIIIII</h2>
+      <div class="features-container">
+        <div class="team-container">
+          <div><img src="./images/team1.png" alt="" /></div>
+          <div><img src="./images/team2.png" alt="" /></div>
+          <div><img src="./images/team3.png" alt="" /></div>
+          <div><img src="./images/team4.png" alt="" /></div>
+        </div>
+        <div>
+          <div class=>
+            <h1 class="feature-title">
+              <span class="seconday-text">Quick list</span> of Our <span class="primary-text">Features</span>
+            </h1>
+            <p class="feature-desc">
+              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            </p>
+            <button class="primary-btn">Explore More</button>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
