--- a/index.html
+++ b/index.html
@@ -50,17 +50,153 @@
           <div><img src="./images/team4.png" alt="" /></div>
         </div>
         <div>
-          <div class=>
+          <div>
             <h1 class="feature-title">
-              <span class="seconday-text">Quick list</span> of Our <span class="primary-text">Features</span>
+              <span class="seconday-text">Quick list</span> of Our
+              <span class="primary-text">Features</span>
             </h1>
             <p class="feature-desc">
-              There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
             </p>
             <button class="primary-btn">Explore More</button>
           </div>
         </div>
       </div>
+    </section>
+    <section class="container">
+      <div class="more-features">
+        <div class="more-features-text-container">
+          <div class="more-features-text">
+            <h1 class="more-features-title special">
+              Features you will <br />
+              love & enjoy
+            </h1>
+
+            <p class="seconday-text more-features-desc">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+            </p>
+          </div>
+          <div class="extra-features">
+            <div class="extra-features-card">
+              <h1 class="extra-features-title">Dexktop & Mobile Version</h1>
+
+              <p class="seconday-text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="extra-features-card">
+              <h1 class="extra-features-title">Drag & Drop Builder</h1>
+
+              <p class="seconday-text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="extra-features-card">
+              <h1 class="extra-features-title">Awesome Modern Design</h1>
+
+              <p class="seconday-text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+            <div class="extra-features-card">
+              <h1 class="extra-features-title">Awesome Modern Design</h1>
+
+              <p class="seconday-text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="more-features-image-container containers">
+          <img src="./images/architect.png" alt="Snow" />
+          <button class="features-btn">
+            10+Year
+            <span class="btn-text">Experience</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="facts">
+        <div class="facts-text">
+          <h1 class="fact-title">Some Facts</h1>
+          <p class="seconday-text fact-desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            <br />
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="facts-container">
+          <div>
+            <img src="./images/icons/ribon.png" alt="" />
+            <h1>54</h1>
+            <p class="seconday-text">Awards Winnings</p>
+          </div>
+          <div>
+            <img src="./images/icons/projects.png" alt="" />
+            <h1>1458</h1>
+            <p class="seconday-text">Project Finished</p>
+          </div>
+          <div>
+            <img src="./images/icons/customers.png" alt="" />
+            <h1>590</h1>
+            <p class="seconday-text">Clients Worked</p>
+          </div>
+          <div>
+            <img src="./images/icons/email.png" alt="" />
+            <h1>22578</h1>
+            <p class="seconday-text">Email Send</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <div class="sponsors">
+        <div class="sponsors-text">
+          <div>
+            <h1 class="sponsor-title">Our Sponspors</h1>
+            <p class="seconday-text sponsor-desc">
+              There are many variations of passages of Lorem Ipsum available,
+              but <br />
+              the majority have suffered alteration.
+            </p>
+          </div>
+        </div>
+        <div class="sponsors-logo-container">
+          <div>
+            <img src="./images/sponsors/spotify.png" alt="" />
+          </div>
+          <div>
+            <img src="./images/sponsors/amazon.png" alt="" />
+          </div>
+          <div>
+            <img src="./images/sponsors/google.png" alt="" />
+          </div>
+          <div>
+            <img src="./images/sponsors/telerama.png" alt="" />
+          </div>
+          <div>
+            <img src="./images/sponsors/figma.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container">
+      <p class="foooter seconday-text">
+        &copy;All rights reserved copyright@2023 startup landing page design
+      </p>
     </section>
   </body>
 </html>
